--- a/challenge_MLE/Makefile
+++ b/challenge_MLE/Makefile
@@ -23,12 +23,13 @@ install:		## Install dependencies
 	pip install -r requirements-test.txt
 	pip install -r requirements.txt
 
+API_URL = https://your-api-url.a.run.app
 STRESS_URL = http://127.0.0.1:8000 
 .PHONY: stress-test
 stress-test:
 	# change stress url to your deployed app 
 	mkdir reports || true
-	locust -f tests/stress/api_stress.py --print-stats --html reports/stress-test.html --run-time 60s --headless --users 100 --spawn-rate 1 -H $(STRESS_URL)
+	locust -f tests/stress/api_stress.py --print-stats --html reports/stress-test.html --run-time 60s --headless --users 100 --spawn-rate 1 -H $(API_URL)
 
 .PHONY: model-test
 model-test:			## Run tests and coverage
@@ -43,3 +44,28 @@ api-test:			## Run tests and coverage
 .PHONY: build
 build:			## Build locally the python artifact
 	python setup.py bdist_wheel
+
+# Additional commands for local development
+.PHONY: run-local
+run-local:		## Run the API locally
+	uvicorn challenge.api:app --reload --port 8000
+
+.PHONY: docker-build
+docker-build:		## Build Docker image
+	docker build -t flight-delay-api .
+
+.PHONY: docker-run
+docker-run:		## Run Docker container locally
+	docker run -p 8080:8080 flight-delay-api
+
+.PHONY: clean
+clean:			## Clean up generated files
+	rm -rf reports/
+	rm -rf .pytest_cache/
+	rm -rf .coverage
+	rm -rf htmlcov/
+	rm -rf dist/
+	rm -rf build/
+	rm -rf *.egg-info
+	find . -type d -name __pycache__ -exec rm -rf {} +
+	find . -type f -name "*.pyc" -delete
