--- a/challenge_MLE/requirements.txt
+++ b/challenge_MLE/requirements.txt
@@ -1,6 +1,8 @@
-fastapi~=0.86.0
-pydantic~=1.10.2
-uvicorn~=0.15.0
-numpy~=1.22.4
-pandas~=1.3.5
-scikit-learn~=1.3.0
+fastapi==0.109.0
+uvicorn==0.27.0
+pandas==2.2.0
+scikit-learn==1.4.0
+xgboost==2.0.3
+numpy==1.26.3
+pydantic==2.5.3
+python-multipart==0.0.6
